# State-Transition-Diagrams

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  flask_blueprint.py  pyproject.toml  renderer.py
demo/: __init__.py  __main__.py  app.py
demo/templates/: demo.html
state_transition_diagrams/: __init__.py  config.py
state_transition_diagrams/static/css/: state_diagram.css
static/js/: state_diagram.js
tests/: __init__.py  conftest.py  test_config.py  test_demo_app.py  test_flask_blueprint.py  test_package.py  test_renderer.py
